Created new classes EntityManager and Game. Added new text file config.txt, and a way to parse it in Game class. Fixed some things with naming, final, virtual and [[nodiscard]]. New Components for collision and rendering. plus updated others, and added them to Entity class. Changed Main.cpp,to test some things and just runs the Game class. Changed Vector2D to struct for public memebers, and changed it to float. Added a couple of basic systems to the Game class like movement, user iknput, gui, rendering and collision systems. Added some gameplay logic to the sandbox. Added some structs to save the parsed config file.

--- a/BlankProject/BlankProject.vcxproj.filters
+++ b/BlankProject/BlankProject.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="Entity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EntityManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector2D.hpp">
@@ -35,5 +41,14 @@
     <ClInclude Include="Components.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EntityManager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt" />
   </ItemGroup>
 </Project>
