Added the initial files for Animation, Assets, BoundingBox Collision, and started the separation of the logic of the game to a GameEngine class and Scenes with Actions. Implementaiton and fine tuning is neccesary. Game class might not be necesary anymore.

--- a/BlankProject/BlankProject.vcxproj
+++ b/BlankProject/BlankProject.vcxproj
@@ -164,17 +164,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actions.cpp" />
+    <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Assets.cpp" />
+    <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Scene_Menu.cpp" />
+    <ClCompile Include="Scene_Play.cpp" />
     <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actions.hpp" />
+    <ClInclude Include="Animation.hpp" />
+    <ClInclude Include="Assets.hpp" />
+    <ClInclude Include="BoundingBox.hpp" />
     <ClInclude Include="Components.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="EntityManager.hpp" />
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="GameEngine.hpp" />
+    <ClInclude Include="Scene.hpp" />
+    <ClInclude Include="Scene_Menu.hpp" />
+    <ClInclude Include="Scene_Play.hpp" />
     <ClInclude Include="Vector2D.hpp" />
   </ItemGroup>
   <ItemGroup>
