--- a/BlankProject/BlankProject.vcxproj
+++ b/BlankProject/BlankProject.vcxproj
@@ -170,7 +170,6 @@
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
-    <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -186,7 +185,6 @@
     <ClInclude Include="Components.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="EntityManager.hpp" />
-    <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameEngine.hpp" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="Scene_Menu.hpp" />
@@ -194,7 +192,8 @@
     <ClInclude Include="Vector2D.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="config.txt" />
+    <Text Include="assets.txt" />
+    <Text Include="level1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
