--- a/.gitignore
+++ b/.gitignore
@@ -365,5 +365,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /BlankProject/imgui.ini
-/BlankProject/config.txt
 /BlankProject/test.png
+/BlankProject/level1.txt
+/BlankProject/level2.txt
+/BlankProject/assets.txt
